--- a/contato.html
+++ b/contato.html
@@ -15,6 +15,8 @@
 				</a>
 			</h1>
 			<nav>
+				<input type="checkbox" id="menu-toggle">
+				<label for="menu-toggle" class="menu-icon"></label>
 				<ul class="principal">
 					<li class="emLinha"><a href="index.html">Home</a></li>
 					<li class="emLinha">
